mailman (1:2.1.14-2) UNRELEASED; urgency=low

  [ Thijs Kinkhorst ]
  * Move mail-transport-agent to Recommends, since Mailman can be
    configured to run with a remote MTA (closes: #616292).

  [ Thorsten Glaser ]
  * Add myself to Uploaders, as suggested by Thijs

 -- Thorsten Glaser <tg@mirbsd.de>  Thu, 11 Aug 2011 09:20:54 +0200

mailman (1:2.1.14-1) unstable; urgency=medium

  * New upstream release. Patches incorporated:
    - 15_mailmanctl_daemonize.patch
    - 83-CVE-2010-3089--bug599833.patch
  * Add upstream patch for CVE-2011-0707: XSS in confirmations.

 -- Thijs Kinkhorst <thijs@debian.org>  Sat, 19 Feb 2011 08:26:43 +0100

mailman (1:2.1.13-4.1) unstable; urgency=high

  * Non-maintainer upload.
  * debian/patches
    - (83): New. CVE-2010-3089 security fix from mailman 2.14. Patch
      thanks to <d+deb@vdr.jp> (grave, security; Closes: #599833).

 -- Jari Aalto <jari.aalto@cante.net>  Sat, 16 Oct 2010 08:46:55 +0300

mailman (1:2.1.13-4) unstable; urgency=medium

  * Fix permissions on /var/lib/mailman/archives/private, so
    archiving works again. Problem introduced in 1:2.1.12-3.
  * Fix invocation of update-rc.d which yields an error when
    not using dependency-based boot (closes: #590249).
  * Checked for policy 3.9.1, no changes needed.

 -- Thijs Kinkhorst <thijs@debian.org>  Tue, 27 Jul 2010 22:56:03 +0200

mailman (1:2.1.13-3) unstable; urgency=low

  * Drop unneeded Indexes option from shipped apache.conf.
  * Eliminate update_rc.d warning by not passing runlevel 1 at stop.
  * Add 25_site_logo patch by Paul Wise (closes: #267243).
  * Do not compress PDF's under /u/s/d/mailman (closes: #582259).
  * Back up ./configure before running autoconf, so it can be restored
    in clean as not to generate irrelevant diff.gz content.
  * Switch to dpkg-source 3.0 (quilt) format.
  * Checked for policy 3.9.0, no changes needed.

 -- Thijs Kinkhorst <thijs@debian.org>  Tue, 13 Jul 2010 21:35:40 +0200

mailman (1:2.1.13-2) unstable; urgency=low
